# chromadb

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: chroma_client.py  llm_client.py  main.py
app/embedding/: generator.py
resources/: .env
resources/prompts/: afi_format_prompt.txt  basic_rag_prompt.txt
