[project]
name = "chromadatabase"
version = "0.1.0"
description = ""
authors = [
    {name = "ayalamanu",email = "manu.ayala05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.115.9)",
    "uvicorn (>=0.29.0,<0.30.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (==2.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false
